# ecfr-analyzer

./: .gitignore  README.md  ecfr-analyzer.sublime-project  package.json  railway.toml
api/: agencies.ts  titles.ts  wordCounts.ts
app/: config.ts  layout.tsx  page.tsx
app/agency-titles/: page.tsx
app/title-compare/: page.tsx
app/word-counts/: page.tsx
components/ecfr/: BarChart.tsx  WordCountDisplay.tsx
ecfr-django/: Procfile  ecfr.py  manage.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt
ecfr-django/ecfr/: asgi.py  settings.py  urls.py  wsgi.py
ecfr-django/regulations/: models.py  serializers.py  urls.py  views.py
ecfr-django/regulations/management/commands/: scrape_agencies.py  scrape_cfr_text.py  update_agencies_wordcounts.py
ecfr-django/regulations/management/scripts/: treas_epa_wc.py
ecfr-django/regulations/migrations/: 0001_initial.py  0002_cfrreference_subpart.py  0003_cfrreference_full_text_cfrreference_last_updated.py  0004_agency_cfr_word_count_alter_cfrreference_title.py
